<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">egreen_fragmentApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="signup">SIGN UP</string>
    <string name="welcome">"Welcome!"</string>
    <string name="already_new">"Already have account!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="label_password">Password</string>
    <string name="confirm_password">confirm password</string>
    <string name="label_email">Email</string>
    <string name="content_description_end_icon" />
    <string name="error_string">Field must not be empty</string>
    <string name="label_username">Username</string>
    <string name="label_plantName">Plant name</string>
    <string name="label_plant_type">Plant Type</string>
    <string name="createplant">Create plant</string>
    <string name="deleteplant">Delete plant</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="new_picture">new picture</string>
    <string name="save_changes">save changes</string>
    <string name="apply_changes">APPLY CHANGES</string>
    <string name="log_out">log out</string>
    <string name="add_new_plant">Add a new plant</string>
    <string name="add_a_photo_for_your_new_plant">Add a photo for your new plant</string>

    <string name="least_6">Your password must be at least  6 characters</string>
    <string name="att_pass">Current password</string>
    <string name="new_pass">New password</string>
    <string name="rip_pass">New password, again</string>
    <string name="save">SAVE</string>

    <string name="new_p">NEW PLANT</string>
    <string name="google">GOOGLE SIGN IN</string>
    <string name="no_acc">I don\'t have any account</string>

    <string name="garden">Garden</string>
    <string name="prof">Profile</string>
    <string name="sett">Settings</string>


    <string name="connect_plant">Connect your plant</string>
    <string name="text_connection">Here you can connect your physical device to your plant. All you need is a home WiFi to connect to and the plant name you choose before.</string>
    <string name="text_connection1">1. Turn on the physical device</string>
    <string name="text_connection2">2. Connect to schedina</string>
    <string name="text_connection3">3. Click the user code below to copy it... you will need it</string>
    <string name="text_connection4">4. Keep in mind the name of the plant you want to connect to. (If you\'re not sure, check it in the garden)</string>
    <string name="text_connection6">When the blue led goes off the system will be connected.</string>
    <string name="connect_device">5. CONNECT DEVICE</string>

    <string name="hum">% humidity</string>
    <string name="water">% water level</string>
    <string name="brig">% of brightness</string>
    <string name="manage">Manage plant settings</string>
    <string name="oxigen">Daily oxigen (L)</string>
    <string name="plants_">Plants</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="settings">Settings</string>
    <string name="account_settings">Account settings</string>
    <string name="garden_settings">Garden settings</string>
    <string name="connection">Connection</string>

    <string name="low_water">Low water in </string>
    <string name="water_level">The water level of your tank is below 25%! Fill it up quickly!</string>
    <string name="enter_mail">Please enter email.</string>
    <string name="enter_pass">Please enter password.</string>
    <string name="logged_succ">You are logged in succesfully</string>


    <string name="mistake">MY MISTAKE</string>
    <string name="yes">YES</string>
    <string name="plant_delete">This plant will be deleted from the system</string>
    <string name="pianta_cancellata">Plant deleted</string>
    <string name="canc">Delete</string>



    <string name="avviso_nome">Sorry, you can\'t change my name:(</string>

    <string-array name="plant_types">
        <item>House plant</item>
        <item>Succulent Plant</item>
        <item>Flower</item>
        <item>Aromatic Plant</item>
    </string-array>
</resources>