<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context="ui.main.LoginFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="304dp"
        android:layout_height="102dp"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconContentDescription="@string/content_description_end_icon"
        app:boxStrokeColor="@color/green_700"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/psw_text_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="MissingConstraints"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_email"
            android:inputType="textEmailAddress"

            android:textColor="@color/green_700" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/psw_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="304dp"
        android:layout_height="72dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/green_700"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconContentDescription="@string/content_description_end_icon"
        app:boxStrokeColor="@color/green_700"
        app:errorEnabled="true"

        app:layout_constraintBottom_toTopOf="@+id/googlebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text_input"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/green_700"
            android:textColorHighlight="@color/green_700" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_acc"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.681" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="248dp"
        android:backgroundTint="?attr/colorButtonNormal"
        android:fontFamily="@font/ropa_sans"
        android:text="log in"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FFFFFF" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="147dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:gravity="fill"
        android:text="LOG IN"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/googlebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google"
        android:textColor="@color/white"

        android:backgroundTint="?attr/colorButtonNormal"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>