<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_theme">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_new_plant"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/plant_info_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <androidx.cardview.widget.CardView
        android:id="@+id/plant_info_container"
        android:layout_width="352dp"
        android:layout_height="582dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        app:cardCornerRadius="60dp"

        app:cardElevation="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="591dp">


            <ImageView
                android:id="@+id/plant_settings_image"
                android:layout_width="182dp"
                android:layout_height="131dp"
                android:src="@drawable/ic_plant_photo"
                app:layout_constraintBottom_toTopOf="@+id/plant_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/plant_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_a_photo_for_your_new_plant"
                app:layout_constraintBottom_toTopOf="@+id/plant_name_input"
                app:layout_constraintEnd_toEndOf="@+id/plant_settings_image"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/plant_settings_image"
                app:layout_constraintTop_toBottomOf="@+id/plant_settings_image" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/plant_name_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="304dp"
                android:layout_height="72dp"
                app:boxStrokeColor="?attr/colorOnPrimary"
                app:endIconTint="?attr/colorOnPrimary"
                app:layout_constraintBottom_toTopOf="@+id/plant_type_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plant_picture">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/plant_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_plantName"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="?attr/colorOnPrimary"
                    android:textColorHighlight="?attr/colorOnPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/plant_type_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="304dp"
                android:layout_height="72dp"
                app:boxStrokeColor="?attr/colorOnPrimary"
                app:endIconMode="dropdown_menu"
                app:endIconTint="?attr/colorOnPrimary"
                app:layout_constraintBottom_toTopOf="@+id/save_Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plant_name_input">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/label_plant_type"
                    android:textColor="?attr/colorOnPrimary"
                    android:textColorHighlight="?attr/colorOnPrimary" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/save_Button"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/createplant"
                android:textColor="@color/white"
                android:backgroundTint="?attr/colorButtonNormal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plant_type_input" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>